--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </head>
 
   <body>
-    <script src="sketch.js"></script>
+    <div id="intro" class="big-text"></div>
+    <script src="script.js"></script>
   </body>
 </html>
