--- a/work.html
+++ b/work.html
@@ -3,25 +3,25 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>work</title>
+    <title>JOEP - WORK</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
-  <body class="home">
+  <body class="home work-page">
     <header class="home-top-links">
       <a class="nav-link nav-link-left highlight-header" href="about.html">joep</a>
       <a class="nav-link nav-link-right highlight-header" href="creative-coding.html">creative coding</a>
     </header>
     <main class="content">
       <section class="grid" aria-label="work blocks">
-        <div class="block">
+        <a class="block block-link" href="creative-coding.html">
           <img src="src/images/work-01.svg" alt="Work preview 1" />
-        </div>
-        <div class="block">
+        </a>
+        <a class="block block-link" href="creative-coding.html">
           <img src="src/images/work-02.svg" alt="Work preview 2" />
-        </div>
-        <div class="block">
+        </a>
+        <a class="block block-link" href="creative-coding.html">
           <img src="src/images/work-03.svg" alt="Work preview 3" />
-        </div>
+        </a>
       </section>
     </main>
   </body>
