--- a/about.html
+++ b/about.html
@@ -21,12 +21,12 @@
         (user interaction en software / creative coding).
       </p>
       <p>
-        Ik <a class="center-inline-link" href="https://www.instagram.com/joepsrommel/" target="_blank" rel="noreferrer">teken</a>, boulder, wandel en kampeer graag.
-      </p>
-      <p>
         Ik maak en ontwerp graag coole dingen met code en wil me
         <br />
         hier graag verder in ontwikkelen.
+      </p>
+      <p>
+        Daarnaast <a class="center-inline-link" href="https://www.instagram.com/joepsrommel/" target="_blank" rel="noreferrer">teken</a>, boulder, wandel en kampeer ik graag.
       </p>
 
       <section class="center-contact" aria-label="Contact">
